# dog_tracker

./: Dockerfile  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
config/: settings.py  urls.py
dog_tracker/: apps.py  models.py  urls.py  views.py
dog_tracker/migrations/: 0001_initial.py
dog_tracker/templates/dog_tracker/: base.html  create_household.html  detail_household.html  home_page.html  list_household.html
