[tool.poetry]
name = "dog-tracker"
version = "0.1.0"
description = ""
authors = ["Annaliese Mathews <amesibov043@gmail.com>"]
readme = "README.md"
packages = [{include = "dog_tracker"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
